[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/pickup/breakable_door.gd" type="Script" id=1]
[ext_resource path="res://빌딩 타일맵/breakable_wall.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "attacked",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "breaked",
"speed": 12.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 47.5 )

[node name="Breakable_door" type="Area2D"]
collision_layer = 1024
collision_mask = 32
script = ExtResource( 1 )

[node name="door_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, 7.5 )
shape = SubResource( 1 )

[node name="playerpos_top" type="RayCast2D" parent="."]
position = Vector2( 2, -15 )
enabled = true
cast_to = Vector2( 103, 0 )

[node name="playerpos_bot" type="RayCast2D" parent="."]
position = Vector2( 3, 40 )
enabled = true
cast_to = Vector2( 98, 0 )

[node name="playerpos_mid" type="RayCast2D" parent="."]
position = Vector2( 3, 12 )
cast_to = Vector2( 100, 0 )

[connection signal="area_entered" from="." to="." method="_on_Breakable_door_area_entered"]
